新增加入最愛的簡單功能，以及加入重要性的顏色分類

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,15 @@ h1{
     text-align: center;
     color: pink;
 }
+.favorite{
+    color: red;
+}
+.bgchangepink{
+    background-color: pink;
+}
+.bgchangeyellow{
+    background-color: lightskyblue;
+}
+.bgchangegreen{
+    background-color: lightgreen;
+}
